@@ -1,20 +1,11 @@
-ThisBuild / scalaVersion     := "2.13.12"
-ThisBuild / version          := "0.1.0-SNAPSHOT"
-ThisBuild / organization     := "com.example"
-ThisBuild / organizationName := "example"
-ThisBuild / fork             := true // 🔧 Forçage global du fork
+// spark-analyzer/build.sbt
+ThisBuild / scalaVersion := "2.13.10"
 
-lazy val root = (project in file("."))
-  .settings(
-    name := "spark-analyzer",
-
-    libraryDependencies ++= Seq(
-      "org.apache.kafka" % "kafka-clients" % "3.5.0",
-      "org.apache.spark" %% "spark-sql"     % "3.5.0"
-    ),
-
-    Compile / run / javaOptions ++= Seq(
-      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
-    ),
-    Compile / run / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.Flat
-  )
+// --- options spécifiques Spark / JDK 17+
+fork := true                               // sbt lancera une JVM séparée
+javaOptions ++= Seq(
+  // Spark >= 3.4 a seulement besoin de ces deux lignes pour JDK 17+
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED"
+)
+libraryDependencies += "org.apache.spark" %% "spark-sql" % "3.5.0"
